--- a/app/src/main/res/drawable/custom_text.xml
+++ b/app/src/main/res/drawable/custom_text.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#FF9CC65C" android:state_pressed="true"/>
-    <item android:color="#FF87DF0A"/>
+    <item android:color="#FFFFFF" android:state_pressed="true"/>
+    <item android:color="@color/green"/>
 </selector>
