--- a/app/src/main/res/layout/activity_db.xml
+++ b/app/src/main/res/layout/activity_db.xml
@@ -10,7 +10,7 @@
 
     <android.support.design.widget.TabLayout
         android:id="@+id/dash_tablayout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:tabTextColor="@color/white"
         app:tabSelectedTextColor="@color/colorPrimary"
